# nerve

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  concept.drawio  main.py  pyproject.toml  release.py  state.py  task.py
.github/ISSUE_TEMPLATE/: feature-request.yml  question.yml
.github/workflows/: build-docker.yml  ci.yml  test.yml
assets/: concept.drawio
crates/groq-api-rs/: .gitignore  Cargo.toml  README.md
crates/groq-api-rs/.github/workflows/: publish.yml
crates/groq-api-rs/src/: lib.rs
crates/groq-api-rs/src/completion/: client.rs  message.rs
crates/groq-api-rs/src/completion/request/: builder.rs  mod.rs
crates/openai_api_rust/: .rustfmt.toml  Cargo.toml  LICENSE  README.md
crates/openai_api_rust/src/: lib.rs  mpart.rs  openai.rs  requests.rs
crates/openai_api_rust/src/apis/: audio.rs  chat.rs  completions.rs  embeddings.rs  images.rs  mod.rs  models.rs
docs/: concepts.md  evaluation.md  index.md  mcp.md  namespaces.md  tasklets.md  workflows.md
docs/assets/: make_ns.py  release.py
examples/: .gitignore  README.md
examples/ab-problem/: README.md  task.yml  tools.py
examples/ab_problem/: .gitignore  README.md  eval.py  task.yml
examples/adk/: full_loop_with_tools.py  single_step.py  single_step_with_tools.py
examples/ai_news/: README.md  task.yml
examples/android-agent/: README.md  agent.yml
examples/auto_rag/: README.md  task.yml
examples/bettercap-agent/: README.md  agent.yml
examples/changelog/: README.md  agent.yml
examples/code-audit/: .gitignore  README.md  agent.yml
examples/code-auditor/: README.md
examples/code_auditor/: README.md  judge.yml  task.yml
examples/code_auditor_with_judge/: README.md  judge.yml  task.yml
examples/computer-use/: agent.yml
examples/desktop/: task.yml
examples/docker-agent/: Dockerfile  README.md  task.yml
examples/eval_test/: eval.py  task.yml
examples/fs_explorer/: README.md  task.yml
examples/fuzzer/: README.md  fuzz.py  task.yml
examples/get-weather/: README.md  agent.yml
examples/kali_pentester/: README.md  task.yml
examples/life/: task.yml  world.py
examples/mcp-recipe/: README.md  agent.yml  create_list_of_ingredients.yml  describe_preparation_steps.yml  estimate_time.yml  rewrite_nicely.yml
examples/mcp-tools/: agent.yml
examples/models/: README.md  llama3-creative.Modelfile
examples/recipe-workflow/: README.md  create_list_of_ingredients.yml  describe_preparation_steps.yml  estimate_time.yml  rewrite_nicely.yml  workflow.yml
examples/recipe_workflow/: README.md  create_list_of_ingredients.yml  describe_preparation_steps.yml  estimate_time.yml  eval.py  rewrite_nicely.yml  state_history.json  workflow.yml
examples/robopages_pentester/: README.md  task.yml
examples/screenshot/: agent.yml  screenshot.py  task.yml  tools.py
examples/shell/: README.md  task.yml
examples/software_dev_workflow/: README.md  chief_product_officer.yml  chief_technology_officer.yml  manager.yml  workflow.yml
examples/ssh-agent/: README.md  agent.yml
examples/ssh_agent/: README.md  task.yml
examples/web_fingerprint/: README.md  task.yml
examples/web_vulnerability_scanner/: README.md  http-req.py  task.yml
examples/webcam/: README.md  dialog.py  requirements.txt  task.yml  tools.py  webcam.py
examples/weird_chat/: README.md  task.yml
mini-rag/: Cargo.toml
mini-rag/src/: document.rs  lib.rs  naive.rs
nerve/: __main__.py  defaults.py  models.py  models_test.py
nerve-cli/: Cargo.toml
nerve-cli/src/: cli.rs  main.rs  setup.rs
nerve-cli/src/ui/: text.rs
nerve-core/: Cargo.toml
nerve-core/src/: lib.rs
nerve-core/src/agent/: mod.rs
nerve-core/src/agent/events/: mod.rs
nerve-core/src/agent/generator/: anthropic.rs  fireworks.rs  groq.rs  mod.rs  novita.rs  ollama.rs  openai.rs  openai_compatible.rs
nerve-core/src/agent/namespaces/: mod.rs
nerve-core/src/agent/namespaces/desktop/: get_mouse_position.prompt  keyboard_key_press.prompt  mod.rs  mouse_hscroll.prompt  mouse_vscroll.prompt  move_left_click.prompt  move_mouse.prompt  move_right_click.prompt  ns.prompt  take_screenshot.prompt
nerve-core/src/agent/namespaces/filesystem/: append_to_file.prompt  mod.rs  ns.prompt  read_folder.prompt
nerve-core/src/agent/namespaces/goal/: mod.rs  ns.prompt
nerve-core/src/agent/namespaces/http/: mod.rs  set-header.prompt
nerve-core/src/agent/namespaces/memory/: delete.prompt  mod.rs
nerve-core/src/agent/namespaces/planning/: mod.rs  ns.prompt
nerve-core/src/agent/namespaces/rag/: mod.rs  ns.prompt
nerve-core/src/agent/namespaces/shell/: mod.rs  ns.prompt
nerve-core/src/agent/namespaces/task/: mod.rs
nerve-core/src/agent/serialization/: mod.rs
nerve-core/src/agent/serialization/xml/: parsing.rs  serialize.rs
nerve-core/src/agent/state/: history.rs  mod.rs  storage.rs
nerve-core/src/agent/task/: basic_guidance.prompt  mod.rs  robopages.rs  tasklet.rs  variables.rs
nerve/cli/: __init__.py  agents.py  create.py  defaults.py  eval.py  execute.py  install.py  namespaces.py  ns.py  replay.py  run.py  serve.py  uninstall.py  utils.py  utils_test.py
nerve/generation/: __init__.py  conversation.py  conversation_test.py  litellm.py  ollama.py  test_conversation.py
nerve/runtime/: __init__.py  agent.py  builtin.py  eval.py  events.py  flow.py  flow_test.py  logging.py  runner.py  runner_test.py  shell.py  state.py  state_test.py  thread_pool.py
nerve/server/: mcp.py  mcp_test.py  rest.py  runner.py  runner_test.py
nerve/tools/: body.j2  compiler.py  compiler_test.py  protocol.py  protocol_test.py  test_compiler.py  utils.py  utils_test.py
src/: cli.rs  listener.rs  main.rs  setup.rs
src/agent/: history.rs  memory.rs  mod.rs  parsing.rs  state.rs  state_system_prompt.txt  workflow.rs
src/api/: mod.rs
src/cli/: cli.rs  mod.rs  setup.rs
src/example_tasks/: mod.rs  web_vulnerability_scanner.rs  web_vulnerability_scanner_system_prompt.txt
src/ui/: mod.rs  text.rs
tasklets/fs_explorer/: task.yml
tasklets/fuzzer/: fuzz.py  task.yml
(+238 files in other folders)
