[package]
name = "nerve-ai"
version = "0.4.1"
edition = "2021"
description = "Nerve is a tool that allows creating stateful agents with any LLM of your choice - without writing a single line of code. The tool provides to the model a framework of functionalities for planning, saving or recalling memories, etc by dynamically adapting the prompt and making it stateful over multiple inferences. The model will be able to access and use these functionalities in order to accomplish the task you provided."
keywords = ["llm", "agent", "stateful-agents", "ai"]
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/evilsocket/nerve"
homepage = "https://github.com/evilsocket/nerve"

[[bin]]
name = "nerve"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
indexmap = "2.2.6"
itertools = "0.13.0"
lazy_static = "1.4.0"
libc = "0.2.155"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_trim = "1.1.0"
serde_yaml = "0.9.34"
simple-home-dir = "0.4.0"
tokio = { version = "1.38.0", features = ["full"] }
xml-rs = "0.8.20"
duration-string = { version = "0.4.0" }
rayon = "1.10.0"
glob = "0.3.1"
human_bytes = "0.4.3"
sha256 = "1.5.0"
bitcode = { version = "0.6.0", features = ["serde"] }
intertrait = "0.2.2"
mini-rag = "0.2.3"
log = "0.4.22"
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "rustls-tls",
] }
url = "2.5.2"
reqwest_cookie_store = "0.8.0"
serde_json = "1.0.120"
clap = { version = "4.5.6", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
clust = { version = "0.9.0" }
ureq = { version = "2.11.0", features = ["json"] }
mime = "0.3.17"
rand = "0.8.5"
reqwest-eventsource = "0.6.0"
futures = "0.3.31"
env_logger = "0.11.3"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
