[tool.poetry]
name = "nerve-adk"
packages = [{ include = "nerve" }, { include = "nerve/py.typed" }]
version = "1.4.0"
description = "The simple agent development kit."
repository = "https://github.com/evilsocket/nerve"
homepage = "https://github.com/evilsocket/nerve"
documentation = "https://github.com/evilsocket/nerve/docs/index.md"
authors = ["evilsocket <evilsocket@gmail.com>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "LICENSE"]
keywords = ["ai", "agent", "nerve", "adk", "agent development kit"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Robot Framework",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic-yaml = "^1.4.0"
jinja2 = "^3.1.5"
typer = "^0.15.1"
litellm = "^1.61.16"
loguru = "^0.7.3"
ollama = "^0.4.7"
click = "^8.1.8"
inquirer = "^3.4.0"
pyautogui = { version = "^0.9.54", optional = true }
pyscreeze = { version = "^1.0.1", optional = true }
pillow = { version = "^11.1.0", optional = true }
pyperclip = { version = "^1.9.0", optional = true }
types-pyautogui = { version = "^0.9.3.20241230", optional = true }
types-pyperclip = { version = "^1.9.0.20250218", optional = true }
termcolor = "^2.5.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20250328"
packaging = "^24.2"

[tool.poetry.extras]
computer_use = [
    "pyautogui",
    "types-pyautogui",
    "pyscreeze",
    "pyperclip",
    "types-pyperclip",
    "pillow",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.14"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.poetry.scripts]
nerve = 'nerve.__main__:run'

[tool.poetry.plugins."pipx.run"]
nerve = 'nerve.__main__:run'

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # numpydoc
    "A",   # flake8-annotations
]
ignore = [
    "E501", # line too long, handled by ruff
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "F722", # syntax error in forward annotation
    "A001", # shadowing built-in
    "A002", # shadowing built-in
]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
