[package]
name = "groq-api-rs"
version = "0.2.0"
edition = "2021"
authors = ["ededddy <eddylei070300@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ededddy/groq-api-rs"
documentation = "https://docs.rs/groq-api-rs/"
repository = "https://github.com/ededddy/groq-api-rs"
description = "Client For Groq Cloud LLM APIs"
keywords = ["groq-api", "groq", "llm", "reqwest"]
categories = ["api-bindings", "web-programming", "asynchronous"]


[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest-eventsource = "0.6.0"
futures = "0.3.30"
